# gpu-poor-training-pipeline

./: .dockerignore  .env.example.inference  .env.example.mgmt  .env.example.remote  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  EXTENDING.md  Makefile  ONBOARDING.md  PARITY.md  README.md  REPO_REVIEW.md  TROUBLESHOOTING.md  defaults.toml  design.md  docker-compose.cpu.yml  docker-compose.nvcr.yml  docker-compose.yml  pyproject.toml  run.sh  verda-container-registry-login.sh
.github/workflows/: live-checks.yml  quality.yml  tests.yml
.mutmut-baseline/: main.txt
.omc/plans/: open-questions.md  repo-readme-extreme-detail.md  verda-dashboard.md  verda-dstack-integration.md  verda-local-emulator.md
app/: main.py  requirements.txt  start.sh
config/: remote_ocr.sample.yaml  remote_youtube_asr.sample.yaml  youtube_channels.sample.txt
dashboard/: Dockerfile  README.md  docker-compose.dashboard.yml  entrypoint.sh
dashboard/src/: bootstrap.py  collector_workers.py  config.py  log_tailer.py  redact.py  ring_buffer.py  safe_exec.py
dashboard/src/collectors/: artifacts.py  dstack_logs.py  dstack_rest.py  tunnel.py  verda_offers.py
dashboard/src/panels/: dstack_runs.py  footer.py  live_metrics.py  local_logs.py  system_panel.py  topbar.py
dashboard/tests/: conftest.py  test_dstack_gate.py  test_forbidden_verbs.py  test_mount_scope.py  test_readonly.py  test_redaction.py  test_threat_model.py
data/: .placeholder
docs/: dstack-dxf-gotchas.md
docs/diagrams/: architecture.mmd  dashboard-poll.mmd  launch-sequence.mmd  shutdown.mmd
dstack/: README.md  fleet.dstack.yml  pretrain.dstack.yml  setup-config.sh  start.sh
dstack/config/: pretrain.dstack.yml
dstack/docs/: README.md
dstack/scripts/: registry-login.sh  render-pretrain-task.sh  setup-config.sh
dstack/scripts/lib/: dstack-cli.sh
examples/: h100_1.toml  runpod_e2e_test.toml  runpod_h100_2b_8k_10m.toml  tiny_cpu.toml  tiny_local.toml  verda_a100_10m.toml  verda_a100x2_10m.toml  verda_b300_10m.toml  verda_b300x2_10m.toml  verda_remote.toml
infra/: probe_runpod_5090.sh  start_runpod_5090.sh
infrastructure/capacity-seeker/: defaults.toml  design  implementation-plan.md
infrastructure/dashboard/: start.sh
infrastructure/dashboard/compose/: .env  docker-compose.yml
infrastructure/dashboard/config/: requirements.txt
infrastructure/dashboard/docker/: Dockerfile
infrastructure/dashboard/docs/: README.md
infrastructure/dashboard/scripts/: entrypoint.sh
infrastructure/dashboard/src/: app.py  bootstrap.py  collector_workers.py  config.py  dstack_project.py  errors.py  log_tailer.py  models.py  redact.py  ring_buffer.py  safe_exec.py  state.py  theme.py  utils.py
infrastructure/dashboard/tests/: conftest.py  test_app_shutdown.py  test_availability_contract.py  test_collectors.py  test_dstack_gate.py  test_dstack_project.py  test_entrypoint.py  test_fanout.py  test_forbidden_verbs.py  test_log_tailer.py  test_mount_scope.py  test_overview.py  test_readonly.py  test_redaction.py  test_ring_buffer.py  test_safe_exec.py  test_state.py  test_streaming_bandwidth.py  test_threat_model.py  test_tmpfs_pressure.py
infrastructure/local-emulator/: start.sh
infrastructure/local-emulator/compose/: docker-compose.cpu.yml  docker-compose.yml
infrastructure/local-emulator/config/: requirements.txt
infrastructure/local-emulator/docker/: Dockerfile
infrastructure/local-emulator/docs/: README.md
infrastructure/local-emulator/src/: main.py  (+2 more)
infrastructure/mlflow/: start.sh
scripts/: doc-anchor-check.sh  fix-wsl-clock.sh  leak_scan.sh  parse-secrets.sh  preflight.sh  smoke.sh
src/gpupoor/: __init__.py  __main__.py  cli.py  compat.py  config.py  connector.py  deployer.py  maintenance.py  paths.py  remote_env.py  runtime_config.py  smoke.py  subprocess_utils.py
src/training_signal_processing/: main.py  models.py
tests/: conftest.py  test_async_upload_coordinator.py  test_cli_entrypoints.py  test_cli_guards.py  test_connector.py  test_deployer.py  test_doctor.py  test_golden_dry_run.py  test_gpupoor_config.py  test_local_backend.py  test_local_emulator_backend.py  test_maintenance.py  test_minimind_recipe.py  test_mlflow_r2_integration.py  test_ocr_resume_recovery.py  test_ocr_upload_refactor.py  test_provider_coverage.py  test_remote_backend.py  test_remote_dataset_contract.py  test_remote_launcher.py  test_repo_guardrails.py  test_run_tunnel_poll_timing.py  test_runtime_generic.py  test_seeker.py  test_smoke_compose.py  test_toml_unknown_key_baseline.py  test_training_wrapper_exit_codes.py  test_utils_compose.py  test_utils_env_files.py  test_utils_http.py  test_utils_logging.py  test_utils_subprocess.py  test_wrapper_delegation.py  test_youtube_asr_pipeline.py
training/: .dockerignore  Dockerfile.remote  Dockerfile.train  README.md  build-and-push.sh  docker-compose.train.yml  remote-README.md  remote-entrypoint.sh  requirements.train.txt  run-train.sh  setup-minimind.sh  start.sh
training/compose/: docker-compose.train.mlflow.yml  docker-compose.train.remote-wrapper.yml  docker-compose.train.yml
training/config/: requirements.train.base.txt  requirements.train.local.txt  requirements.train.txt
training/docker/: Dockerfile.base  Dockerfile.remote  Dockerfile.train
training/docs/: README.md
training/lib/: jq-fallback.sh
training/mlflow-stack/: Dockerfile.mlflow  README.md  docker-compose.mlflow.yml  docker-compose.train.mlflow.yml  run-tunnel.sh
training/patches/: minimind-atomic-save.patch
training/scripts/: build-and-push.sh  build-base-image.sh  ensure-local-env.sh  prepare-data.sh  pretokenize-data.sh  remote-entrypoint.sh  run-train.sh  upload-pretokenized-data.sh
training/tests/: conftest.py  test_benchmark_metrics.py  test_local_emulator_dataset_contract.py  test_local_emulator_wrapper_contract.py  test_lr_schedule.py  test_mlflow_helper.py  test_pretokenized_dataset.py  test_pretrain_data_collator.py  test_repo_layout.py  test_sigterm.py  test_train_args.py  test_train_runtime_guards.py  test_training_click_cli.py  test_training_local_env.py
(+115 files in other folders)
